Add downloaded zip file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Welcome</title>
+    <title>Gymmate - Work Out Together</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -31,7 +31,7 @@
             <p>
               GymMate will message your friends once it sees you finishing your workout goals
             </p>
-            <a href="#">
+            <a href="gymmate-main.zip" download>
               Download
             </a>
           </div>
